Dropdown box to select crypto capability level has been added to healthcare and online shopping scenarios. Label 'Crypto Capability' for it is also added

--- a/console/views/scenario.jade
+++ b/console/views/scenario.jade
@@ -92,6 +92,13 @@ html(lang='en')
 									button(id='btn_update_tl', class='btn btn-default' style='margin-bottom:4px') Update
 								div(class='col-md-4')
 									button(id='btn_view_ab', class='btn btn-default' style='margin-bottom:4px') AB Viewer
+							div(class='row' style='margin-top:10px;')
+								div(class='col-md-6')
+									label(class='checkbox-inline crypcaplabel' style='margin-left:-20px; margin-top:7px') Crypto Capability
+								div(class='col-md-6')
+									select(id='cryptocap' class='form-control' style='margin-left:-20px; margin-top:0px; margin-bottom:5px')
+										//for srv_name in services
+										//	option=srv_name.display_name
 							div(class='row' style='margin-top:6px;')
 								div(class='col-md-5')
 									label(class='checkbox-inline tamper' style='margin-left:-20px; margin-top:5px') Tamper  Attack
