1. In scenario.jade:   1.1. the label 'Crypto Capability' has been renamed to        'Client Browser' capability   1.2. location of label and combobox for Capability has been modified:      div(class='col-md-8') , div(class='col-md-4') is now used instead of      div(class='col-md-6'), div(class='col-md-6')
2. In scenario.js: strings with dash, e.g. 0-2 instead of 0..2 etc are now
  used to populate Client browser capability combobox - see
  var crypto_cap = ['0-2', '3-5', '6-9'];

--- a/console/views/scenario.jade
+++ b/console/views/scenario.jade
@@ -93,10 +93,10 @@ html(lang='en')
 								div(class='col-md-4')
 									button(id='btn_view_ab', class='btn btn-default' style='margin-bottom:4px') AB Viewer
 							div(class='row' style='margin-top:10px;')
-								div(class='col-md-6')
-									label(class='checkbox-inline crypcaplabel' style='margin-left:-20px; margin-top:7px') Crypto Capability
-								div(class='col-md-6')
-									select(id='cryptocap' class='form-control' style='margin-left:-20px; margin-top:0px; margin-bottom:5px')
+								div(class='col-md-8')
+									label(class='checkbox-inline crypcaplabel' style='margin-left:-20px; margin-top:7px') Client Browser Capability
+								div(class='col-md-4')
+									select(id='cryptocap' class='form-control' style='margin-left:-30px; margin-top:0px; margin-bottom:5px')
 										//for srv_name in services
 										//	option=srv_name.display_name
 							div(class='row' style='margin-top:6px;')
